# beangame2

./: CMakeLists.txt  main.c  net_client.c  objects.h  player.c  player.h
desktop/: CMakeLists.txt  entity.c  main.c  net_client.c  player.c
desktop/include/: flecs.h  player.h
desktop/include/net/: net_client.h
esp32s3/include/: structs.h
esp32s3/include/net/: net_common.h
include/net/: net_client.h
net/: net_client.h  net_common.h
